--- a/artistas.html
+++ b/artistas.html
@@ -33,7 +33,7 @@
                         Mergulhe na obra de Eliseu Visconti, um dos mais importantes paisagistas brasileiros do século XX. Através de suas telas vibrantes e cheias de poesia, Visconti capturou a essência da paisagem paulista, retratando cidades, campos e florestas com...
                     </p>
                 </div>
-                <div class="img3"></div>
+                <img class="img2_1" src="./imagens/img3.jpg">
             </div>
         </div>
 
